Finally with too much pain, be able to add Jar dependencies off maven input project